AP-14034: move data url handling to loadViewValue
AP-14034 (Enable file upload widget to work in the AP)